# git-police

./: .gitignore  README.md  pyproject.toml
src/git_police/: cleaner.py  cli.py  helpers.py  llm.py
