[project]
name = "git-police"
version = "0.1.4"
description = "A package that prevents AI slop by asking you questions about your code changes before allowing you to commit"
license={text="MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.51.0",
    "ollama>=0.6.1",
    "rich>=14.2.0",
    "scrubadub>=2.0.1",
    "typer>=0.20.0",
]

[project.scripts]
git-police="git_police.cli:app"


